# reposense

./: .env.example  .gitignore  CLAUDE.md  README.md  TASKS.md  pyproject.toml  reposense.py  run.sh  setup.sh  skills-lock.json
.agents/skills/reposense-commit-push/: SKILL.md
agent/: claude_agent.py  coral_runner.py  mcp_server.py  prompts.py
demo/: README.md  demo.sh  demo_script.md  reposense-demo.cast
docs/: .~lock.SRS.docx#  blog-post.md  coral-community-pr.md  engineering-decisions.md  linkedin-post.md
queries/: contributors.sql  cve_scan.sql  dev_buzz.sql  duplicates.sql  hn_buzz.sql  pulse.sql  release_notes.sql  scorecard.sql  so_buzz.sql  stale_prs.sql  triage.sql
sources/devto/: README.md  manifest.yaml
sources/stackoverflow/: README.md  manifest.yaml
ui/: chat.py  splash.py  tables.py
